# claude-mail

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  leptos_manual.txt  rfc-assumptions.md  rfc-clarifications.md  style.css
jmap-client/: Cargo.toml
jmap-client/src/: client.rs  error.rs  lib.rs  types.rs
src/: app.rs  eventsource.rs  main.rs  router.rs  state.rs  sync.rs
src/components/: compose.rs  email_list.rs  mailbox_sidebar.rs  mod.rs  thread_view.rs
src/pages/: login.rs  mail.rs  mod.rs
