[workspace]
members = ["jmap-client"]

[package]
name = "jmap-webmail"
version = "0.1.0"
edition = "2024"

[dependencies]
jmap-client = { path = "./jmap-client" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Location", "Storage",
    "Element",
    "Request", "RequestInit", "RequestMode", "Headers",
    "Response", "ReadableStream", "ReadableStreamDefaultReader",
    "AbortController", "AbortSignal",
] }
